fix clipping on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -431,10 +431,14 @@ canvas {
 .home-image {
   width: 100%;
   height: 100%;
-  -webkit-clip-path: url(#clip);
-  clip-path: url(#clip);
   object-fit: cover;
   z-index: -1;
+  -moz-clip-path: url(#clip);
+  -webkit-clip-path: url(#clip);
+  clip-path: url(#clip);
+}
+.clip {
+  
 }
 
 /* .aspect-ratio--home {
@@ -453,9 +457,21 @@ canvas {
 
 .home-svg {
   width: 100%;
+  height: 100%;
   position: absolute;
-
+  z-index: 100;
 }
+
+.vid{
+  object-fit: cover;
+}
+
+/* .home-svg-hover {
+  width: 100%;
+  position: absolute;
+  z-index: 100;
+  opacity: 0;
+} */
 
 .interactive-container {
   vertical-align: middle;
